# gaig

./: CMakeLists.txt  README.md  build.sh  clean.sh  gaig.cpp  init.sh  pip_requirements.txt  requirements.txt  run.sh  test.sh
src/const/: evolution_constants.h
src/evolution/: Circle.cpp  Circle.h
src/img_utils/: image.hpp  image_loader.hpp  pixel.h
src/img_utils/sfml_img_utils/: displayCircleVector.cpp  displayCircleVector.h  display_circle.cpp  display_circle.h  sfml_image.cpp  sfml_image.h  sfml_pixel.cpp  sfml_pixel.h
src/main_class/: geneticEvolution.cpp  geneticEvolution.h
src/population/: a.out  individual.cpp  individual.h  individual1.cpp  individual1.h  individual2.cpp  individual2.h  individualFactory.cpp  individualFactory.h  main.cpp  population.cpp  population.h  population1.cpp  population1.h  population2.cpp  population2.h  populationFactory.cpp  populationFactory.h
src/rand_generation/: random_parameter.cpp  random_parameter.h  uniform_random_parameter.cpp  uniform_random_parameter.h
test/: CMakeLists.txt  test.cpp
